testsuite/tests/rep-poly/T23154.hs
{-# LANGUAGE PartialTypeSignatures #-}

module T23154 where

import GHC.Exts

f x = x :: (_ :: (TYPE (_ _)))
